# OmniOmicsR

./: ARCHITECTURE.md  CONTRIBUTING.md  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  V2_ENHANCEMENTS.md  _pkgdown.yml  demo_simulation_benchmark.R  quick_test.R
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml
R/: RcppExports.R  aaa-imports.R  benchmark-suite.R  classes-Enhanced.R  classes-OmicsExperiment.R  classes-OmniProject.R  clinical-analysis.R  export-report.R  integrate-multiomics.R  io-readers.R  ml-ensemble.R  ml-feature-selection.R  ml-vae.R  preprocess-batch.R  preprocess-normalize.R  qc-metrics.R  qc-scrna.R  sc-multiomics.R  simulation-engine.R  spatial-omics.R  stats-association.R  stats-bayesian.R  stats-diffexp.R  stats-enrich.R  stats-network.R  utils-data.R  utils-logging.R  viz-advanced.R  viz-integrations.R  viz-qc.R  zzz.R
inst/extdata/: example_counts.csv  metabolites_mztab_min.tsv  proteinGroups_min.txt
inst/scripts/: default.qmd
omnigraphdiff/: ARCHITECTURE.md  BUILD_AND_RUN.md  MODEL_DESIGN.md  PROJECT_STRUCTURE.md  README.md  requirements.txt  setup.py
omnigraphdiff/configs/: default_tcga.yaml
omnigraphdiff/cpp_backend/: CMakeLists.txt
omnigraphdiff/cpp_backend/include/omnigraph/: graph_ops.hpp  message_passing.hpp  sampling.hpp  sparse_graph.hpp  types.hpp
omnigraphdiff/cpp_backend/src/: bindings.cpp  sparse_graph.cpp
omnigraphdiff/examples/: minimal_synthetic_demo.py
omnigraphdiff/omnigraphdiff/: __init__.py
omnigraphdiff/omnigraphdiff/losses/: __init__.py  losses.py
omnigraphdiff/omnigraphdiff/models/: __init__.py  clinical_head.py  cross_attention.py  decoders.py  diffusion.py  encoders.py  gnn_layers.py  omnigraphdiff_model.py  vae.py
omnigraphdiff/omnigraphdiff/training/: __init__.py  callbacks.py  trainer.py
omnigraphdiff/omnigraphdiff/utils/: __init__.py  config.py  logging.py  metrics.py  reproducibility.py
omnigraphdiff/r_interface/R/: omnigraphdiff_wrapper.R
omnigraphdiff/scripts/: train_omnigraphdiff.py
src/: RcppExports.cpp  utils.cpp
tests/: testthat.R
tests/testthat/: test-assoc.R  test-io.R  test-normalize.R  test-preprocess-more.R  test-viz.R
vignettes/: getting_started.qmd  multiomics_integration.qmd  rna_proteomics_workflow.qmd  singlecell_workflow.qmd
